<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:minWidth="1000dp"
    android:minHeight="450dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/custom_dialog_pw_change_subject_text"
        android:textColor="@color/color_FF5504"
        android:textSize="50dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/custom_dialog_pw_change_content_text"
        android:textColor="@color/color_000000"
        android:textSize="20dp" />

    <Button
        android:id="@+id/btn_do_change_pw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/color_373020"
        android:padding="15dp"
        android:text="@string/custom_dialog_pw_change_button"
        android:textColor="@color/color_FFFFFF"
        android:textSize="40dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/color_ECEDEC"
        android:gravity="center"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_dont_watch_custom_dialog_pw_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_dialog_pw_change_dont_watch_check_box"
            android:textColor="@color/color_000000"
            android:textSize="25dp" />


        <Button
            android:id="@+id/bt_do_close_custom_dialog_pw_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:text="@string/custom_dialog_pw_change_close_button"
            android:textColor="@color/color_6E6E6E"
            android:textSize="30dp" />


    </LinearLayout>


</LinearLayout>